--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,5 @@
 <extends src="base.html">
+
     <block name="main">
         <div class="scroller max-w-4xl mx-auto">
             <include src="01_home.html"></include>
@@ -17,7 +18,7 @@
             <div class="container mx-auto pb-12 px-8 flex justify-between">
                 <include src="whitepaper-link.html"></include>
                 <div>
-                    <button class=""
+                    <button class="next"
                             id="scroll-down">
                         <svg class="fill-current w-4 inline"
                              width="15"
