--- a/public/index.html
+++ b/public/index.html
@@ -90,6 +90,7 @@
     Corona News
 </button>
     </div>
+    <div class="w-10 lg:w-16"></div>
 </section>
             <section class="snap-container">
     <div class="ms-slider text-xl lg:text-2xl font-hairline">
@@ -216,10 +217,8 @@
                 Jetzt schon <b class="font-bold">neugierig</b>?
             </div>
             <p class="max-w-lg ml-auto text-blue-500">
-                Dann erfahre als einer der ersten alle Details über gettup und melde Dich für
-                unseren Newsletter an. <br>
-                Einfach E-Mail-Adresse eintragen und schon geht´s los. Als Dankeschön versorgen wir Dich ab sofort und
-                regelmäßig mit hilfreichen Infos zu den geplanten Corona Staatshilfen für gemeinnützige Organisationen.
+                Unser Newsletter informiert über aktuelle <b>Corona Hilfsangebote</b> und gibt einen Einblick in den
+                derzeitigen Stand der gettup Plattform.
             </p>
             <iframe class="mj-w-res-iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://app.mailjet.com/widget/iframe/5n6j/Ecq" width="100%"></iframe>
 
